# thunderlab

./: .mkdocs.yml  404.html  README.md  build-docs.sh  index.html  pyproject.toml  requirements.txt  search.html
.github/workflows/: runchecks.yml  uploaddocs.yml
api/: configfile.html  consoleinput.html  convertdata.html  dataloader.html  datawriter.html  eventdetection.html  fourier.html  index.html  multivariateexplorer.html  powerspectrum.html  tabledata.html  version.html  voronoi.html
cover/: class_index.html  function_index.html  index.html  status.json  z_660609cc43dbd77a___init___py.html  z_660609cc43dbd77a_configfile_py.html  z_660609cc43dbd77a_consoleinput_py.html  z_660609cc43dbd77a_convertdata_py.html  z_660609cc43dbd77a_dataloader_py.html  z_660609cc43dbd77a_datawriter_py.html  z_660609cc43dbd77a_eventdetection_py.html  z_660609cc43dbd77a_fourier_py.html  z_660609cc43dbd77a_multivariateexplorer_py.html  z_660609cc43dbd77a_powerspectrum_py.html  z_660609cc43dbd77a_tabledata_py.html  z_660609cc43dbd77a_version_py.html  z_660609cc43dbd77a_voronoi_py.html
docs/: multivariateexplorer.md
multivariateexplorer/: index.html
search/: search_index.json
src/thunderlab/: __init__.py  configfile.py  consoleinput.py  convertdata.py  dataloader.py  datawriter.py  eventdetection.py  fourier.py  inputcheck.py  multivariateexplorer.py  powerspectrum.py  resampledata.py  spectralfilters.py  tabledata.py  version.py  voronoi.py
tests/: test_configfile.py  test_consoleinput.py  test_convertdata.py  test_dataloader.py  test_datawriter.py  test_eventdetection.py  test_fourier.py  test_multivariateexplorer.py  test_powerspectrum.py  test_tabledata.py  test_voronoi.py
