[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderlab"
dynamic = ["version"]
dependencies = [
  "scikit-learn",
  "scipy",
  "numpy",
  "numba",
  "matplotlib",
  "audioio>=2.1"
]
requires-python = ">=3.6"
authors = [
  {name = "Jan Benda", email = "jan.benda@uni-tuebingen.de"},
  {name = "Jörg Henninger"},
  {name = "Jan Grewe"},
  {name = "Fabian Sinz"},
]
maintainers = [
  {name = "Jan Benda", email = "jan.benda@uni-tuebingen.de"},
]
description = "Algorithms and scripts for analyzing recordings of electric fish waveforms."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository    = "https://github.com/bendalab/thunderlab"
Documentation = "https://bendalab.github.io/thunderlab"

[project.scripts]
convertdata = "thunderlab.convertdata:main"
multivariateexplorer = "thunderlab.multivariateexplorer:main"

[tool.setuptools.dynamic]
version = {attr = "thunderlab.version.__version__"}

[tool.pytest.ini_options]
pythonpath = "src"
